--- a/package.json
+++ b/package.json
@@ -141,7 +141,8 @@
     "test": "gulp test",
     "flow": "flow",
     "update-webdriver": "node node_modules/protractor/bin/webdriver-manager update",
-    "start": "node server"
+    "start": "node server",
+    "postinstall": "bower install && gulp build-libs && gulp build"
   },
   "private": true
 }
